--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
     <div class="flex-col flex justify-evenly p-8 md:flex-row">
       <div>
         <p class="text-[32px] text-[#7562E0] p-[10px]">Connect with me</p>
-        <img src="Group 17.svg" class="pt-[10px]" />
+        <img src="./src/Group 17.svg" class="pt-[10px]" />
       </div>
       <div>
         <p class="text-[#7562E0] text-[28px] p-[10px]">
