--- a/hello.html
+++ b/hello.html
@@ -12,7 +12,7 @@
       class="flex items-center justify-evenly gap-[0px] md:flex-row flex-col"
     >
       <div class="relative pt-8">
-        <img src="Me.svg" class="w-[385px]" />
+        <img src="./src/Me.svg" class="w-[385px]" />
       </div>
       <div>
         <h1 class="text-[#FFFFFF] text-[36px] pb-7">
