--- a/nav-bar.html
+++ b/nav-bar.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style type="text/tailwindcss">
-        /* @theme {
-          --color-clifford: #da373d;
-        } */
-
-    </style>
+    <script src="https://cdn.tailwindcss.com"></script> <!--Linking Tailwind css-->
 </head>
 <body class="m-0 p-0">
     <div class="min-w-full bg-[#1b0b2d] flex justify-between items-center px-5 flex-col md:flex-row"> <!--Navigation bar -->
         <div class="left-cont flex">
             <div id="logo" class="py-3">
-                <img src="src/Objects.svg">
+                <img src="src/Objects.svg"><!--Logo-->
             </div>
             <div class="text-newcolor-2 text-3xl text-[#7127BA] py-4 px-6">My Portfolio</div>
         </div>
@@ -25,10 +19,8 @@
             <a href="#" class="text-[#FFFFFF] px-3">About me</a>
             <a href="#" class="text-[#FFFFFF] px-3">Projects</a>
             <a href="#" class="text-[#FFFFFF] px-3">Contact</a>
- 
         </div>
     </div>
   </div>
-    
 </body>
 </html>
