--- a/aboutme.html
+++ b/aboutme.html
@@ -1,44 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-[#11071F] text-white">
-    <div>
-      <div class="text-[36px] text-[#7562E0] p-5">About Me</div>
-      <p class="p-5">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque impedit
-        odio voluptatum, aliquam, accusantium eaque distinctio, laboriosam
-        molestiae praesentium unde magni. Sit quam delectus tempore, incidunt
-        doloremque nulla minus fugit?
-      </p>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+</head>
+
+<body class="bg-[#11071F] text-white font-[Poppins]">
+    <div class="About me py-2">
+        <div class="text-4xl text-[#7562E0]">About Me</div>
+        <p class="text-2xl py-3">
+          Lorem ipsum dolor sit amet consectetur. Amet pellentesque vitae morbi purus fringilla posuere sit. Enim non sed habitant odio amet eu ipsum. Quis enim sed nunc orci morbi parturient elit. Dolor viverra nec ornare ac viverra et mauris imperdiet. Urna feugiat turpis neque malesuada imperdiet. Eros etiam penatibus laoreet sed nulla phasellus amet ac purus.
+        </p>
     </div>
-    <div>
-      <div class="text-[36px] text-[#7562E0] pt-8 p-5">Education</div>
-      <div class="flex justify-evenly p-5 flex-col md:flex-row">
-        <div
-          class="bg-linear-to-bl from-blue-50 to-pink-50 border-[#4F228D] border-t-4 rounded-[15px] p-5 min-w-[25%] max-w-[400px]"
-        >
-          <h2>Course Name-2020 to Present</h2>
-          <h5>University Name</h5>
-          <p>Grade:0.00</p>
-          <p>Skills acquired:</p>
-          <ul class="list-disc pl-8">
-            <li>Lorem ipsum dolor sit</li>
-            <li>Lorem ipsum dolor sit</li>
-          </ul>
-        </div>
-        <div
-          class="border-[#4F228D] border-t-4 rounded-[15px] p-5 max-w-[400px] min-w-[25%]"
-        >
-          <h2>Board of Higher Secondary Eductaion-2018 to 2020</h2>
-          <h5>School Name</h5>
-          <p>Grade:0.00</p>
-        </div>
-      </div>
-    </div>
-  </body>
+</body>
+
 </html>
