--- a/footer.html
+++ b/footer.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
 
-    <title>Document</title>
-  </head>
-  <body class="bg-[#11071F]">
-    <div class="flex-col flex justify-evenly p-8 md:flex-row">
-      <div>
-        <p class="text-[32px] text-[#7562E0] p-[10px]">Connect with me</p>
-        <img src="./src/Group 17.svg" class="pt-[10px]" />
-      </div>
-      <div>
-        <p class="text-[#7562E0] text-[28px] p-[10px]">
-          Contact me, let’s make magic together
-        </p>
-        <input
-          class="bg-[#F5F5F5] opacity-30 rounded-[4px] block p-[10px] m-[10px] min-w-full"
-          type="text"
-          placeholder="Name:"
-        />
-        <input
-          class="rounded-[4px] opacity-30 block p-[10px] m-[10px] min-w-full"
-          type="email"
-          placeholder="Email:"
-        />
-        <input
-          class="rounded-[4px] opacity-30 block p-[10px] m-[10px] min-w-full"
-          placeholder="Message:"
-        />
-        <button class="bg-[#7562E0] w-[174px] rounded-[4px] m-[10px]">
-          Send
-        </button>
-      </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+</head>
+
+<body class="bg-[#11071F] font-[Poppins]">
+    <div class="flex-col flex justify-between p-8 md:flex-row">
+        <div class="flex flex-col">
+            <p class="text-3xl text-[#7562E0] pb-2">Connect with me</p>
+            <img src="src/Group 17.svg" class="pb-2" />
+        </div>
+        <div>
+            <p class="text-3xl text-[#FFFFFF] pb-2">
+                Contact me, let's make magic together
+            </p>
+            <input class="bg-[#F5F5F5] bg-opacity-30 placeholder:text-[#F5F5F5] placeholder:text-opacity-50 rounded-lg block p-[10px] my-4 h-16 min-w-full" type="text" placeholder="Name:">
+            <input class="bg-[#F5F5F5] bg-opacity-30 placeholder:text-[#F5F5F5] placeholder:text-opacity-50 rounded-lg block p-[10px] my-4 h-16 min-w-full" type="email" placeholder="Email:">
+            <input class="bg-[#F5F5F5] bg-opacity-30 placeholder:text-[#F5F5F5] placeholder:text-opacity-50 rounded-lg block p-[10px] my-4 h-24 min-w-full" placeholder="Message:">
+            <button class="bg-[#7562E0] w-44 h-12 rounded-lg">
+                Send
+            </button>
+        </div>
     </div>
     <footer>
-      <p class="text-[#7562E0] text-center text-[14px]">Designed by DCS</p>
+        <p class="text-[#7562E0] text-center text-4">Designed by DCS</p>
     </footer>
-  </body>
+</body>
+
 </html>
