--- a/nav-bar.html
+++ b/nav-bar.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script> <!--Linking Tailwind css-->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
-<body class="m-0 p-0">
-    <div class="min-w-full bg-[#1b0b2d] flex justify-between items-center px-5 flex-col md:flex-row"> <!--Navigation bar -->
-        <div class="left-cont flex">
-            <div id="logo" class="py-3">
-                <img src="src/Objects.svg"><!--Logo-->
+
+<body class="m-0 p-0 font-[Poppins]">
+    <nav class="fixed top-0 z-50 max-w-full px-3 py-2 md:px-10 md:py-5 min-w-full">
+        <div class="min-w-full bg-[#1b0b2d] flex justify-between items-center px-10 flex-col sticky rounded-xl md:flex-row">
+            <div class="left-cont flex">
+                <div id="logo" class="py-3">
+                    <img src="src/Objects.svg">
+                </div>
+                <div class="text-3xl text-[#7127BA] py-4 px-6">My Portfolio</div>
             </div>
-            <div class="text-newcolor-2 text-3xl text-[#7127BA] py-4 px-6">My Portfolio</div>
+            <div class="right-cont flex flex-col gap-3 text-center md:ml-auto md:flex-row md:gap-5 md:h-100 overflow-y-hidden md:overflow-y-visible">
+                <a href="#" class="text-[#7127BA] px-6">Home</a>
+                <a href="#" class="text-[#FFFFFF] px-6">About me</a>
+                <a href="#" class="text-[#FFFFFF] px-6">Projects</a>
+                <a href="#" class="text-[#FFFFFF] px-6">Contact</a>
+            </div>
+            </div>
         </div>
-        <div class="right-cont flex">
-            <a href="#" class="text-[#7127BA] px-3">Home</a>
-            <a href="#" class="text-[#FFFFFF] px-3">About me</a>
-            <a href="#" class="text-[#FFFFFF] px-3">Projects</a>
-            <a href="#" class="text-[#FFFFFF] px-3">Contact</a>
-        </div>
-    </div>
-  </div>
+    </nav>
 </body>
+
 </html>
