--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <div class="flex text-3xl text-[#7127BA] font-bold py-4 px-5">My Portfolio</div>
                 </div>
                 <div class="hidden md:flex items-center">
-                    <a href="#" class="text-[#7127BA] font-bold px-4">Home</a>
-                    <a href="#About_me" class="text-[#FFFFFF] font-bold px-4">About me</a>
-                    <a href="#Projects" class="text-[#FFFFFF] font-bold px-4">Projects</a>
-                    <a href="#Contact" class="text-[#FFFFFF] font-bold px-4">Contact</a>
+                    <a href="#" class="text-[#7127BA] font-bold p-4">Home</a>
+                    <a href="#About_me" class="text-[#FFFFFF] font-bold p-4">About me</a>
+                    <a href="#Projects" class="text-[#FFFFFF] font-bold p-4">Projects</a>
+                    <a href="#Contact" class="text-[#FFFFFF] font-bold p-4">Contact</a>
                 </div>
                 <div class="md:hidden flex items-center">
                     <button class="mobile-menu-button">
